# packages/api-contracts/openapi.json
@@ -909,6 +909,27 @@
         "tags": ["Bookings"]
       }
     },
+    "/api/v1/bookings/{id}/address": {
+      "get": {
+        "operationId": "BookingsController_address",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": ["Bookings"]
+      }
+    },
     "/api/v1/bookings/{id}/confirm": {
       "post": {
         "operationId": "BookingsController_confirm",
